cd/overlays/staging_devnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zq2-stake-frontend
  labels:
    app.kubernetes.io/name: zq2-stake-frontend
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gke-gateway-stg
      sectionName: https
  hostnames:
    - stake.zq2-devnet.zilliqa.com
  rules:
    - backendRefs:
        - name: zq2-stake-frontend
          port: 3000
